# mordor_gates

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: bot.py  config.py  gates.py
app/zadarma/: api.py
